// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Branches with branch list renders correctly 1`] = `
<div>
  <h1>
    Filiais
  </h1>
  <div
    className=".branch-list-container"
  >
    <BranchList
      branches={
        Array [
          Object {
            "id": 1,
            "inCharge": "Hadoldo",
            "name": "madureira",
          },
          Object {
            "id": 2,
            "inCharge": "Paula",
            "name": "Meier",
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`Branches with empty branch list should match with snapshot 1`] = `
<div>
  <h1>
    Filiais
  </h1>
  <div
    className=".branch-list-container"
  >
    <BranchList
      branches={Array []}
    />
  </div>
</div>
`;
